--- a/EndecaCartridge_CRS.html
+++ b/EndecaCartridge_CRS.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
-    <meta name="keywords" content="Endeca, XM, Experience Manager, ATG, CRS, Commerce Reference Store, Cartridge, Template">
+    <meta name="keywords" content="Endeca, XM, Experience Manager, ATG, CRS, Commerce Reference Store, Cartridge, Template"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Technoon | Node & Mongo</title>
@@ -23,7 +23,6 @@
       <hr />
     </div>
   </div>
-
 
 <!-- Main Page Content and Sidebar -->
 <div class="row">
