--- a/arduino.html
+++ b/arduino.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
-    <meta name="keywords" content="Arduino">
+    <meta name="keywords" content="Arduino"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Technoon Tutorial - Arduino</title>
