--- a/drishticon.html
+++ b/drishticon.html
@@ -59,23 +59,22 @@
       <img src="images/tmp/Home_M2_2.png" />
       <h4>Technology Services</h4>
       <p>@ Drishticon, we provide technology services on various industry leading software & tools, including Oracle ATG eCommerce, Hadoop Big Data, Testing, etc.,
-      <br><a href="">Read More →</a>
       </p>
+      <p><a href="">Read More →</a><p>
     </div>
     
     <div class="large-4 columns">
       <img src="images/tmp/Home_M2_1.png" />
       <h4>Kukus Framework </h4>
       <p>Drishticon eCommerce Online Shopping Framework “KuKus", is a full featured, online, ready to go eCommerce Platform.</p>
-      <br><a href="">Read More →</a>
+      <p><a href="">Read More →</a><p>
     </div>
     
     <div class="large-4 columns">
       <img src="images/tmp/Home_M2_3.png" />
       <h4>Visit Our Technical Blog</h4>
-      <p>Our Technical blog have articles in eCommerce & Bigdata. <br>
-      <a href="http://technoon.github.io/lessons/">Visit Blog →</a>
-      </p>
+      <p>Our Technical blog have articles in eCommerce & Bigdata.</p>
+      <p><a href="http://technoon.github.io/lessons/">Visit Blog →</a></p>
     </div>
   
     </div>
