--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
-    <meta name="keywords" content="Node, Node.js, MongoDB, Mongo, Mongoose, EJS, Express">
+    <meta name="keywords" content="Node, Node.js, MongoDB, Mongo, Mongoose, EJS, Express"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Technoon | Node & Mongo</title>
