--- a/EndecaCartridge_CRS.html
+++ b/EndecaCartridge_CRS.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
-    <meta name="keywords" content="Endeca, XM, Experience Manager, ATG, CRS, Commerce Reference Store, Cartridge, Template"/>
+    <meta name="keywords" content="Endeca, Cartridge, XM, Experience Manager, ATG, CRS, Commerce Reference Store, Template"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Technoon | Node & Mongo</title>
@@ -40,9 +40,13 @@
 </div>
 
 <div class="large-6 columns">
-<image src="http://technoon.github.io/lessons/images/ATG_CRS_Endeca.png"/>
+<img src="images/ATG_CRS_Endeca.png"/>
 </div>
 </div>
+
+<p>
+<img src="images/PageAssembly.png"/>
+</p>
 
 <h4><a href="#">1. Creating Endeca Cartridge Template XML</a></h4>
 <p>Create a folder "Hello-World" under "C:\Endeca\APPS\CRS\config\cartridge_templates" and create the below template.xml file with the new cartridge definition. Note:  This cartridge a of type "HeaderContent".  Copy the thumbnail.png & locale folder from the other existing cartridges (e.g. HeaderBanner-ATGCategory).  Update the template description in the "Resources_en" file. </p>
