--- a/EndecaCartridge_CRS.html
+++ b/EndecaCartridge_CRS.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="Endeca, Cartridge, XM, Experience Manager, ATG, CRS, Commerce Reference Store, Template"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Technoon | Node & Mongo</title>
+    <title>Technoon | How to create Endeca Cartridge for ATG CRS</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <script src="js/vendor/modernizr.js"></script>
   </head>
@@ -19,7 +19,7 @@
          <li><a href="http://linkedin.com/in/vrkrajesh/" class="small button">About me</a></li>
         </ul>
       </div>
-      <h1>Technoon <small>Tutorials <br> Creating Endeca Catridge - ATG CRS</small></h1>
+      <h1>Technoon <small>Tutorials<br>Creating Endeca Cartridge to use in ATG CRS</small></h1>
       <hr />
     </div>
   </div>
@@ -44,6 +44,7 @@
 </div>
 </div>
 
+<br>
 <p>
 <img src="images/PageAssembly.png"/>
 </p>
@@ -187,13 +188,13 @@ $scope=prototype
 
 <br>
 <p>
-iv) A cartridge handler should be mapped to a corresponding Renderer (HelloWorldCatridgeRenderer). Ideally renderers are JSPs. Copy the below JSP renderer into the j2ee-apps\Storefront\store.war\cartridges\Hello-World folder.  Where Hello-World is a newly created folder. 
+iv) A cartridge handler should be mapped to a corresponding Renderer (HelloWorldCartridgeRenderer). Ideally renderers are JSPs. Copy the below JSP renderer into the j2ee-apps\Storefront\store.war\cartridges\Hello-World folder.  Where Hello-World is a newly created folder. 
 </p>
 
 <br>
 
 <p>
-v) Finally map Cartridge to CatridgeHandler component.  
+v) Finally map Cartridge to CartridgeHandler component.  
 </p>
 
 <div class="panel">
