--- a/EndecaCartridge_CRS.html
+++ b/EndecaCartridge_CRS.html
@@ -190,7 +190,8 @@ iv) A cartridge handler should be mapped to a renderer (HelloWorldCartridgeRende
 
 &lt;dsp:page&gt;
   &lt;dsp:importbean bean="/OriginatingRequest" var="originatingRequest"/&gt;
-  &lt;dsp:getvalueof var="contentItem" vartype="com.endeca.infront.assembler.ContentItem" value="${originatingRequest.contentItem}"/&gt; 
+  &lt;dsp:getvalueof var="contentItem" vartype="com.endeca.infront.assembler.ContentItem"
+       value="${originatingRequest.contentItem}"/&gt; 
   &lt;h2 class="title"&gt;
       &lt;c:out value="${contentItem.welcomeMessage}" /&gt; 
   &lt;/h2&gt;
