--- a/EndecaCartridge_CRS.html
+++ b/EndecaCartridge_CRS.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
-    <meta name="keywords" content="Endeca, Cartridge, XM, Experience Manager, ATG, CRS, Commerce Reference Store, Template"/>
+    <meta name="keywords" content="Endeca Cartridge, cartridge, Endeca, Cartridge, XM, Experience Manager, ATG, CRS, Commerce Reference Store, Template"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Technoon | How to create Endeca Cartridge for ATG CRS</title>
