new mongodb&node html
new mongodb&node html

--- a/EndecaCartridge_CRS.html
+++ b/EndecaCartridge_CRS.html
@@ -312,7 +312,7 @@ a HelloWorld.jsp. Copy this JSP into the browse folder in "store.war".  You may 
  
       <h5>Rajesh's Writings : </h5>
       <ul class="side-nav">
-        <li><a href="http://technoon.github.io/lessons">Node & MongoDB</a></li>
+        <li><a href="http://technoon.github.io/lessons/mongodb_nodejs">Node.js & MongoDB</a></li>
         <li><a href="http://technoon.github.io/lessons/arduino">Arduino Microcontroller</a></li>
         <li><a href="http://technoon.github.io/lessons/EndecaCartridge_CRS">ATG CRS & Endeca Cartridge</a></li>
         <li><a href="#">Knockout JS</a></li>
