--- a/arduino.html
+++ b/arduino.html
@@ -154,7 +154,7 @@ speed of a DC motor or control the direction of a SERVO motor. Options are plent
  
       <h5>Rajesh's Writings : </h5>
       <ul class="side-nav">
-        <li><a href="http://technoon.github.io/lessons">Node & MongoDB</a></li>
+        <li><a href="http://technoon.github.io/lessons/mongodb_nodejs">Node.js & MongoDB</a></li>
         <li><a href="http://technoon.github.io/lessons/arduino">Arduino Microcontroller</a></li>
         <li><a href="http://technoon.github.io/lessons/EndecaCartridge_CRS">ATG CRS & Endeca Cartridge</a></li>
         <li><a href="#">Knockout JS</a></li>
