--- a/mongodb_nodejs.html
+++ b/mongodb_nodejs.html
@@ -4,7 +4,7 @@
     <meta name="keywords" content="Node, Node.js, MongoDB, Mongo, Mongoose, EJS, Express"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Technoon | Node & Mongo</title>
+    <title>Technoon | Node.js & MongoDB</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <script src="js/vendor/modernizr.js"></script>
   </head>
