--- a/index.html
+++ b/index.html
@@ -277,9 +277,9 @@ function renderResult(res, prds, msg) {
  
       <h5>Rajesh's Writings : </h5>
       <ul class="side-nav">
-        <li><a href="http://technoon.github.io/lessons/mongodb_nodejs">Node.js & MongoDB</a></li>
+        <li><a href="http://technoon.github.io/lessons/mongodb-nodejs">Node.js & MongoDB</a></li>
         <li><a href="http://technoon.github.io/lessons/arduino">Arduino Microcontroller</a></li>
-        <li><a href="http://technoon.github.io/lessons/EndecaCartridge_CRS">ATG CRS & Endeca Cartridge</a></li>       
+        <li><a href="http://technoon.github.io/lessons/Endeca-Cartridge-ATG-CRS">ATG-CRS Endeca Cartridge</a></li>       
         <li><a href="#">Knockout JS</a></li>
         <li><a href="#">Rasberry Pi</a></li>
       </ul>
