--- a/chef.html
+++ b/chef.html
@@ -114,7 +114,6 @@ Get the username & password from the Cloudshare VM credentials.
 After bootstraping, run the below command to check for the successful node registration with the chef server
 
 knife client list
-
 </pre>
 </div>
 <br>
@@ -164,7 +163,7 @@ end
 <pre>
 Content of the 'index.html.erb' is below. 
 
-<h1>Hello Chef! </h1>
+<code><h1>Hello Chef! </h1></code>
 </pre>
 </div>
 
